# gi

./: .gitignore  .gitmodules  CMakeLists.txt
include/: buffer.hh  camera.hh  compositor.hh  debug.hh  editor.hh  engine.hh  entity.hh  env_renderer.hh  event.hh  framebuffer.hh  imgui_layer.hh  loader.hh  mesh.hh  renderer.hh  resource_manager.hh  scene.hh  shader.hh  texture.hh  utils.hh  vertex_array.hh  window.hh
include/components/: camera.hh  identifier.hh
lib/: camera.cc  compositor.cc  debug.cc  editor.cc  engine.cc  env_renderer.cc  framebuffer.cc  imgui_layer.cc  loader.cc  main.cc  mesh.cc  renderer.cc  resource_manager.cc  scene.cc  shader.cc  texture.cc  utils.cc  vertex_array.cc  window.cc
shaders/: cubemap_frag.glsl  cubemap_vert.glsl  fragment.glsl  fullscreen.glsl  motion_blur.glsl  panorama_to_cubemap.glsl  post.glsl  tonemap.glsl  tonemapping.glsl  vertex.glsl
